[gd_scene load_steps=3 format=3 uid="uid://l7s3kkyh2scg"]

[ext_resource type="Script" path="res://scripts/end_of_month_menu.gd" id="1_h1wl2"]
[ext_resource type="PackedScene" uid="uid://drm50b6ex8wt1" path="res://scenes/horizontal_spacer.tscn" id="1_paj8l"]

[node name="EndOfMonthMenu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h1wl2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Pay Ya Bill"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MoneyLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Money: $000"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 30
columns = 4

[node name="NameLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Name"
horizontal_alignment = 1

[node name="OwedLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Owed"
horizontal_alignment = 1

[node name="HorizontalSpacer" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GridContainer" instance=ExtResource("1_paj8l")]
layout_mode = 2

[node name="PaidLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
text = "Paid"
horizontal_alignment = 1

[node name="DetailsLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
autowrap_mode = 2

[node name="PayoutLabel" type="Label" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.686275, 0, 1)
autowrap_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "Continue"
